--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -177,19 +177,19 @@ p {
    .notion-heading {
      transform: rotate(339deg);
      position: relative;
-     left: -2px;
-     top: 30px;
-     margin-top: -.1rem;
+     left: 186px;
+     top: 36px;
+     max-width: 250px;
   }
   div[id^="page-index"]
   .notion-header__title { 
     transform: rotate(248deg) !important;
     font-size: 3.9rem!important;
     margin-left: 40px!important;
-    margin-bottom: -32px!important;
-    margin-top: -23px!important;
+    margin-bottom: 68px!important;
+    margin-top: -36px!important;
     position: relative;
-    left: 172px;
+    left: 112px;
     letter-spacing: 1.4px !important;
   }
   
