--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -62,7 +62,7 @@ div[id^="page-index"]
 .notion-header__title {
     transform: rotate(248deg) !important;
     font-size: 3.9rem!important;
-    margin-top: -30px!important;
+    margin-top: -50px!important;
     position: relative;
     left: 167px;
     bottom: 68px;
@@ -185,9 +185,9 @@ p {
   .notion-header__title { 
     transform: rotate(248deg) !important;
     font-size: 3.9rem!important;
-    margin-left: 40px!important;
+   /* margin-left: 40px!important;
     margin-bottom: 68px!important;
-    margin-top: -36px!important;
+    margin-top: -36px!important; */
     position: relative;
     left: 108px;
     top: -92px;
