--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -1,3 +1,24 @@
+::-webkit-scrollbar {
+  width: 0px !important;
+}
+
+/* 4px scroll thumb. 10px margin from right margin */
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 24px 24px transparent !important;
+  border: solid 4px transparent !important;
+}
+
+::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 24px 24px transparent !important;
+  border: solid 4px transparent !important;
+  border-radius: 100% !important;
+}
+
+::-webkit-scrollbar-button {
+  display: none  !important;
+}
+
 :root {
   --column-spacing: 30px !important;
   --color-bg-default: #ADB5BD !important;
