--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -42,7 +42,293 @@
 
 .notion-text {
   position: relative;
+}:root {
+  --column-spacing: 30px !important;
+  --color-bg-default: #ADB5BD !important;
+    --color-pill-default:#F8F9FA !important;
+    --color-pill-gray: #F8F9FA !important;
+    --color-pill-brown: #F8F9FA !important;
+    --color-pill-orange: #F8F9FA !important;
+    --color-pill-yellow: #F8F9FA !important;
+    --color-pill-green: #F8F9FA !important;
+    --color-pill-blue: #F8F9FA !important;
+    --color-pill-purple: #F8F9FA !important;
+    --color-pill-pink: #F8F9FA !important;
+    --color-pill-red: #F8F9FA !important;
+ }
+ 
+
+.super-navbar__item {
+  background: #343a40;
+  color: #f8f9fa;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  max-width: 164px;
+  position: relative;
+  left: 10px;
+  margin-left: 10px;
+  text-transform: uppercase;
+  margin-bottom: 8px;
 }
+ 
+ .super-content {
+  position: relative;
+}
+
+.max-width {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -10%);
+}
+
+.notion-text {
+  position: relative;
+}
+
+.notion-toggle {
+  display: none;
+ }
+
+.notion-property__title__icon-wrapper {
+  display: none !important;
+ }
+
+.notion-collection__header-wrapper {
+  display: none;
+ }
+
+.notion-header__content.max-width {
+  max-width: 722px;
+ }
+
+.notion-collection-list {
+  border: none;
+ }
+ 
+ .super-navbar__item {
+  font-weight: 900 !important;
+ }
+ 
+ .notion-property__title {
+  background: #DEE2E6;
+  padding: 6px !important;
+  margin: 7px;
+}
+
+.notion-property__title > span {
+  font-size: 1.2em !important;
+  font-weight: 700 !important;
+  padding-left: 10px;
+}
+
+div[id^="page-index"]
+.notion-header__title {
+  display: none !important;
+}
+
+div[id^="page-index"]
+.notion-heading {
+  display: none !important;
+}
+ 
+
+/* STYLING OF MAIN PAGE */
+
+
+.notion-pill {
+  padding: 13px 40px !important;
+ }
+ 
+.notion-collection-list__item-property:first-child {
+    text-decoration: underline;
+    font-size: 9.5rem;
+    font-weight: 600;
+    position: relative;
+    left: 30px;
+}
+ 
+.notion-image { 
+    display: flex !important;
+    position: absolute;
+    bottom: 57vh;
+    left: -30vw;
+    transform: rotate(120deg) !important;
+    z-index: -1 !important;
+}
+.notion-collection-list{ 
+  overflow: hidden;
+}
+
+.notion-collection-list__item {
+  padding: 20px;
+  background: #CED4DA;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 4px 4px;
+  margin: 1px 0;
+  border-radius: 4px;
+  cursor: pointer;
+  color: inherit;
+  text-decoration: none;
+  position: relative;
+}
+
+/* WORKAROUND TO PREVENT HOVER */
+.notion-collection-list__item:hover {
+  background: #CED4DA !important;
+}
+
+.notion-collection-list__item .notion-property__title .notion-semantic-string > span {
+    border-bottom: none !important;
+  }
+
+/* ATTACK THE COLUMNS */
+.notion-column-list {
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+}
+ 
+.notion-column:nth-of-type(even) {
+  position: relative;   
+  max-width: 590px;
+  min-width: 590px;
+  left: 76px;
+}
+  
+  .notion-column:nth-of-type(odd) {
+  position: relative;
+  min-width: 590px;
+  max-width: 590px;
+  left: 90px;
+}
+
+
+/* INTERNAL PAGES */
+
+.notion-page__properties {
+    display: none;
+  }
+  
+  /* STYLING INTERNAL PAGES */
+
+div[id^="parent-page__lists-of-posts"] .notion-header__title {
+    transform: unset !important;
+    margin-bottom: 10px;
+  }
+
+p {
+   font-size: 1.3rem;
+  }
+
+/* EXTRA WIDTH ADAPT */
+
+@media (min-width:1381px) {
+  .notion-image{
+  left: -20vw !important;
+  }
+}
+
+
+/* TABLET ADAPT 1 + LANDSCAPE IPHONE X*/
+
+@media (min-width:696px) and (max-width : 960px) {
+  
+  div[id^="page-index"]
+  .notion-column-list{ 
+    right: 40px;
+  }
+}
+
+/* TABLET ADAPT 2*/
+
+@media (min-width:481px) and (max-width : 695px) {
+    
+  div[id^="page-index"]
+  .notion-column-list{ 
+    right: 90px !important;
+    margin-top: 15px !important;
+    }
+    .notion-column:nth-of-type(even) {
+    /* width: 100% !important; */
+    margin-inline-start: 25px !important;
+    }
+}
+
+
+/* MOBILE ADAPT 1 */
+@media (min-width:320px) and (max-width : 480px){
+  
+  .notion-column {
+    padding: 50px;
+  }
+  
+.notion-collection-list__item {
+  flex-direction: column !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  background: none !important;
+  display: block;
+  width: 65%;
+  border: none !important;
+  border-radius: 1px !important;
+}
+
+.notion-collection-list__item-property 
+{ 
+
+  
+  font-size: 14.5rem !important;
+  font-weight: 700 !important;
+  padding: 0px !important;
+  margin-top: -20px !important;
+  margin-bottom: 25px;
+  z-index: -1; 
+  text-decoration: none !important;
+  letter-spacing: -10px;
+}
+
+ .notion-property__title {
+   padding: 5px !important;
+   font-size: 1.3rem;
+   border-radius: 3px;
+}
+
+.notion-pill {
+     padding: 18px 40px !important;
+     width: 80%;
+     border-radius: 3px;
+  }
+  
+  .notion-column:nth-of-type(even) {
+  position: relative;   
+  max-width: 590px;
+  min-width: 590px;
+  left: 90px;
+}
+
+.notion-image {
+    display: none !important;
+  }
+}
+
+
+/* MOBILE ADAPT 2 */
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+                    only screen and (min--moz-device-pixel-ratio: 2),
+                    only screen and (-o-min-device-pixel-ratio: 2/1),
+                    only screen and (min-device-pixel-ratio: 2)
+                    {
+ .super-content {
+  transform: scale (0.8);
+   }
+ }
+
 
 .notion-toggle {
   display: none;
