--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -21,6 +21,30 @@
     
  }
  
+
+
+::-webkit-scrollbar {
+  width: 0px !important;
+}
+
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 0 0 transparent !important;
+  border: solid 0 transparent !important;
+}
+
+::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 0 0 transparent !important;
+  border: solid 0px transparent !important;
+  
+}
+
+::-webkit-scrollbar-button {
+  display: none  !important;
+}
+
+
+ 
  body {
             animation: fadeInAnimation ease 3s;
             animation-iteration-count: 1;
@@ -48,20 +72,34 @@
   text-transform: uppercase;
   margin-bottom: 8px;
 }
- 
- .super-content {
+
+.super-navbar__item {
+  font-weight: 900 !important;
+ }
+
+
+/* LAYOUT */
+
+.super-content {
   position: relative;
 }
+
+div[id^="page-index"]
+.notion-header__title {
+  display: none !important;
+}
+
+div[id^="page-index"]
+.notion-heading {
+  display: none !important;
+}
+
 div[id^="page-index"]
 .max-width {
   position: absolute;
   top: 26%;
   left: 45%;
   transform: translate(-50%, -10%);
-}
-
-.notion-text {
-  position: relative;
 }
 
 .notion-toggle {
@@ -80,13 +118,11 @@ div[id^="page-index"]
   max-width: 722px;
  }
 
-.notion-collection-list {
-  border: none;
- }
- 
- .super-navbar__item {
-  font-weight: 900 !important;
- }
+
+
+/* STYLING OF MAIN PAGE VIA */
+/* POSTS TITLES */
+/* POSTS PROPS */
  
  .notion-property__title {
   background: #DEE2E6;
@@ -100,25 +136,11 @@ div[id^="page-index"]
   padding-left: 10px;
 }
 
-div[id^="page-index"]
-.notion-header__title {
-  display: none !important;
-}
-
-div[id^="page-index"]
-.notion-heading {
-  display: none !important;
-}
- 
-
-/* STYLING OF MAIN PAGE */
-
-
 .notion-pill {
   padding: 13px 40px !important;
  }
  
-.notion-collection-list__item-property:first-child {
+.notion-collection-list__item-property {
     text-decoration: underline;
     font-size: 9.5rem;
     font-weight: 700;
@@ -126,19 +148,12 @@ div[id^="page-index"]
     left: 30px;
     letter-spacing: -5px;
 }
- 
-.notion-image { 
-    display: flex !important;
-    position: absolute;
-    bottom: 57vh;
-    left: -30vw;
-    transform: rotate(120deg) !important;
-    z-index: -1 !important;
-}
-.notion-collection-list{ 
-  overflow: hidden;
-}
 
+.notion-collection-list {
+  border: none;
+  overflow: hidden;
+ }
+ 
 .notion-collection-list__item {
   padding: 20px;
   background: #CED4DA;
@@ -386,7 +401,7 @@ p {
     display: none;
   }
   
-/* PRUEBA */
+/* SWITCH LANGUAGE */
 
 [data-theme="light"], :root {
   --opacidad: none;
@@ -405,14 +420,12 @@ p {
 }
 
 #hola {
-    
     position: relative;
     display: block !important;
     transform: scale(0.6);
-    
   }
   
-  #hola > p {
+#hola > p {
     margin: 1vh auto 0;
     transform: translateY(-50%);
     width: 46px;
@@ -423,9 +436,7 @@ p {
     margin-bottom: 3px;
   }
   
-  #hola > p > img {
-    
-    
+#hola > p > img {
     border-radius: 4px;
     border: 1px groove #ADB5BD;
     width: 52px !important;
@@ -437,19 +448,5 @@ p {
     box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
   }
   
-  /* DOUBLE COLOR THEME */
+
   
-
-/* COLORES DE TEXT EN COLUMNA IMPAR 
-#block-0063149e8cc24ad0a7cefd7964cd47be
-{
-  color: pink !important;
-}
-  */
-  
-
-
-
-
-
-
