--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -1,4 +1,59 @@
+<script>
+  document.addEventListener("keydown", function(event) {
+    
+        // to switch appearance themes
+    if (event.key === "n") {
+      document.documentElement.setAttribute('data-theme', 'dark');
+          localStorage.setItem('theme', 'dark');
+    }
+    if (event.key === "e") {
+      document.documentElement.setAttribute('data-theme', 'light');
+          localStorage.setItem('theme', 'light');
+    }
+  });
+</script>
 
+<script>
+function clearBlock(el) {
+        const node = el.parentElement.parentElement;
+        node.innerHTML = '';
+        return node;
+    }
+
+const SELECTOR = 'code:not([super-embed-seen])';
+function setupEmbeds() {
+
+    document.querySelectorAll(SELECTOR).forEach((node) => {
+    node.setAttribute('super-embed-seen', 1);
+    if (node.innerText.startsWith('super-embed:')) {
+        const code = node.innerText.replace('super-embed:', '');
+            const parentNode = clearBlock(node);
+            parentNode.innerHTML = code;
+            parentNode.querySelectorAll('script').forEach((script) => {
+                if (!script.src && script.innerText) {
+                    eval(script.innerText);
+                } else {
+                    const scr = document.createElement('script');
+                    scr.src = script.src;
+                    document.body.appendChild(scr);
+                }
+            })
+        }
+    })
+}
+
+setupEmbeds();
+
+var observer = new MutationObserver(function(mutations) {
+   if (document.querySelector(SELECTOR)) {
+      setupEmbeds();
+    }
+});
+observer.observe(document, {attributes: false, childList: true, characterData: false, subtree:true});
+</script>
+    
+
+<style>
 
 :root {
   --opacidad: none;
@@ -448,5 +503,5 @@ p {
     box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
   }
   
-
+</style>
   
