--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -205,8 +205,8 @@ div[id^="page-index"]
 }
 
 .notion-collection-list {
-  border: none;
-  overflow: hidden;
+  border: none !important;
+  overflow: hidden !important;
  }
  
 .notion-collection-list__item {
