--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -151,6 +151,7 @@ div[id^="page-index"]
 
 .notion-collection-list {
   border: none !important;
+  overflow: hidden !important;
  }
  
 .notion-collection-list__item {
