--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -7,18 +7,7 @@
   --abajo: 0;
   --boton: 7px;
   --column-spacing: 30px !important;
-  --color-bg-default: #ADB5BD !important;
-    --color-pill-default:#F8F9FA !important;
-    --color-pill-gray: #F8F9FA !important;
-    --color-pill-brown: #F8F9FA !important;
-    --color-pill-orange: #F8F9FA !important;
-    --color-pill-yellow: #F8F9FA !important;
-    --color-pill-green: #F8F9FA !important;
-    --color-pill-blue: #F8F9FA !important;
-    --color-pill-purple: #F8F9FA !important;
-    --color-pill-pink: #F8F9FA !important;
-    --color-pill-red: #F8F9FA !important;
-    
+  --color-bg-default: #e9ecef !important;
  }
  
 
