--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -7,7 +7,7 @@
   --abajo: 0;
   --boton: 7px;
   --column-spacing: 30px !important;
-  --color-bg-default: #e9ecef !important;
+  --color-bg-default: #ced4da !important;
    /*WORKAROUND HOVER EFFECT UNSET */
   --color-border-default: #ced4da !important
  }
