--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -135,6 +135,7 @@ div[id^="page-index"]
   padding-left: 10px !important;;
 }
 
+div[id^="page-index"]
 .notion-semantic-string {
     font-weight: 500;
     font-size: 1rem !important;
