--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -12,12 +12,11 @@
   --color-border-default: #ced4da !important
  }
  
-
+/* NO SCROLL BAR */
 
 ::-webkit-scrollbar {
   width: 0px !important;
 }
-
 
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 0 0 transparent !important;
@@ -34,13 +33,11 @@
   display: none  !important;
 }
 
-
- 
- body {
+body {
             animation: fadeInAnimation ease 3s;
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
-        }
+     }
         @keyframes fadeInAnimation {
             0% {
                 opacity: 0;
@@ -50,7 +47,6 @@
             }
         }
  
-
 .super-navbar__item {
   background: #343a40;
   color: #f8f9fa;
