--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -174,7 +174,7 @@ div[id^="page-index"]
  
 .notion-collection-list__item {
   padding: 20px;
-  background: #CED4DA;
+  background: #adb5bd;
   width: 100%;
   display: flex;
   flex-direction: row;
