--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -275,8 +275,8 @@ p {
     
   div[id^="page-index"]
   .notion-column-list{ 
-    right: 62px !important;
-    margin-top: 5vh !important;
+    right: 63px !important;
+    margin-top: 0vh !important;
     }
     .notion-column:nth-of-type(even) {
     /* width: 100% !important; */
@@ -288,6 +288,26 @@ p {
     #hola {
       opacity: 0;
     }
+    div[id^="page-index"]
+.notion-header__title {
+  display: block !important;
+  position: relative;
+  top: 20px !important;
+  left: 250px;
+  background: #6c757d;
+  color: #f8f9fa;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  padding: 0px 15px 0px 15px;
+  letter-spacing: 0.6px;
+  opacity: 0.5;
+}
+
+div[id^="page-index"] h1 {
+  line-height: 45px;
+  position: relative;
+  top: 2px !important;
+}
 }
 
 
